# CelPaint

./: .gitignore  CMakeLists.txt  ColorReplaceDialog.cpp  ColorReplaceDialog.h  ImageSequence.cpp  ImageSequence.h  README.md  build_log.txt  entry.cpp  main.cpp  main.h
Core/: AppController.cpp  AppController.h  CMakeLists.txt  CelPaintTypes.h  ColorSwapModel.cpp  ColorSwapModel.h  GuideCheckModel.cpp  GuideCheckModel.h  ImageSequence.cpp  ImageSequence.h  ImageSequenceProvider.cpp  ImageSequenceProvider.h  TimelineModel.cpp  TimelineModel.h  UndoCommands.cpp  UndoCommands.h
UI/: CMakeLists.txt  CanvasView.qml  ColorReplaceDialog.qml  GuideColorDialog.qml  Main.qml  PhotoshopColorPicker.qml  Theme.js  TimelineView.qml
UI/components/: AppMenuBar.qml  TimelineHeader.qml
UI/dialogs/: AlphaCheckDialog.qml  ColorPicker.qml  ColorReplaceDialog.qml  GuideColorDialog.qml
UI/views/: CanvasView.qml  TimelineView.qml
